fixed alignment

--- a/style.css
+++ b/style.css
@@ -5350,7 +5350,7 @@
             margin: 0 auto;
             color: #fff;
             justify-content: center;
-            text-align: left;
+            text-align: center;
         }
     
         .footer-contanier-1 h2{
